[project]
name = "palco"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipython>=8.37.0",
    "jedi>=0.19.2",
    "jsonmerge>=1.9.2",
    "netaddr>=1.3.0",
    "pexpect>=4.9.0",
    "pluggy>=1.2.0",
    "ptpython>=3.0.32",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "rich>=14.2.0",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python",
]

[project.scripts]
palco = "palco.main:main"

[project.entry-points."palco"]
core = "palco.plugins.core"
booting = "palco.plugins.setup_environment"
no_reservation = "palco.plugins.no_reservation"

[build-system]
    build-backend = "setuptools.build_meta"
    requires      = ["setuptools", "setuptools-scm"]

[tool.setuptools_scm]
    version_scheme = "no-guess-dev"


[dependency-groups]
ci = [
    "pre-commit>=4.5.1",
    "pre-commit-uv>=4.2.0",
]
dev = [
    "covdefaults>=2.3.0",
    "coverage>=7.13.0",
    "mypy>=1.19.1",
    "nox>=2025.11.12",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "pytest-randomly>=4.0.1",
    "pytest-socket>=0.7.0",
    "ruff>=0.14.10",
    "types-netaddr>=1.3.0.20251108",
    "types-pexpect>=4.9.0.20250916",
    "types-requests>=2.32.4.20250913",
    { include-group = "ci" },
]

[tool.ruff]
    line-length    = 88
    target-version = "py310" # as per README

    [tool.ruff.format]
        docstring-code-format = true

    [tool.ruff.lint]
        fixable = ["ALL"]
        ignore = [
            "COM812", # conflict with autoformatter
            "D203", # conflict with autoformatter,
            "D213", # conflict with autoformatter
            "FIX002", # TODOs are not blockers
            "ISC001", # conflict with autoformatter
            "T201", # allow usage of print
            # ignore for now
            "FIX001", # used as a placeholder for further work
            "SLF001", # accessing protected members
            "TD", # one-man shop here
        ]
        select = ["ALL"]
        unfixable = [
            "F401", # we must know why we are not using the imported module
        ]

        [tool.ruff.lint.per-file-ignores]
            "tests/*" = [
                "S101", # pytest works with assert
                "ANN201", # all tests return None
                # ignore for now
                "PLR2004", # usage of magic numbers
            ]
