[project]
name = "palco"
dynamic = ["version"]
description = "Framework to set up an environment by deploying and configuring the devices in such environment."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipython>=8.37.0",
    "jedi>=0.19.2",
    "jsonmerge>=1.9.2",
    "netaddr>=1.3.0",
    "pexpect>=4.9.0",
    "pluggy>=1.2.0",
    "ptpython>=3.0.32",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "rich>=14.2.0",
]
license = "BSD-3-Clause"

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Telecommunications Industry",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Acceptance",
    "Typing :: Typed",
]

[project.scripts]
palco = "palco.main:main"

[project.entry-points."palco"]
core = "palco.plugins.core"
booting = "palco.plugins.setup_environment"
no_reservation = "palco.plugins.no_reservation"

[project.urls]
Homepage = "https://github.com/karrukola/palco"
Repository = "https://github.com/karrukola/palco"
Issues = "https://github.com/karrukola/palco/issues"

[build-system]
    build-backend = "setuptools.build_meta"
    requires      = ["setuptools>=77.0.3", "setuptools-scm>=10.0.5"]

[tool.setuptools_scm]
# Fail on dirty trees and strip local version — recommended for release CI
# TODO: move to no-local-version-strict once released
local_scheme = "no-local-version"

[dependency-groups]
ci = [
    "pre-commit>=4.5.1",
    "pre-commit-uv>=4.2.0",
    "nox>=2026.2.9",
]
dev = [
    "covdefaults>=2.3.0",
    "coverage>=7.13.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "pytest-randomly>=4.0.1",
    "pytest-socket>=0.7.0",
    "ruff>=0.14.10",
    "types-netaddr>=1.3.0.20251108",
    "types-pexpect>=4.9.0.20250916",
    "types-requests>=2.32.4.20250913",
    { include-group = "ci" },
]

[tool.ruff]
    line-length    = 88
    target-version = "py310" # as per README

    [tool.ruff.format]
        docstring-code-format = true

    [tool.ruff.lint]
        fixable = ["ALL"]
        ignore = [
            "COM812", # conflict with autoformatter
            "D203", # conflict with autoformatter,
            "D213", # conflict with autoformatter
            "FIX002", # TODOs are not blockers
            "ISC001", # conflict with autoformatter
            "T201", # allow usage of print
            # ignore for now
            "FIX001", # used as a placeholder for further work
            "SLF001", # accessing protected members
            "TD", # one-man shop here
        ]
        select = ["ALL"]
        unfixable = [
            "F401", # we must know why we are not using the imported module
        ]

        [tool.ruff.lint.per-file-ignores]
            "tests/*" = [
                "S101", # pytest works with assert
                "ANN201", # all tests return None
                # ignore for now
                "PLR2004", # usage of magic numbers
            ]

[tool.coverage.run]
    omit     = ["noxfile.py"]
    parallel = true
    plugins  = ["covdefaults"]


[tool.coverage.report]
    # ref: https://coverage.readthedocs.io/en/latest/excluding.html
    exclude_also = [
        "@(abc\\.)?abstractmethod",
        "class .*\\bProtocol\\):",
        "def __repr__",
        "if 0:",
        "if TYPE_CHECKING:",
        "if __name__ == .__main__.:",
        "if self.debug:",
        "if settings.DEBUG",
        "raise AssertionError",
        "raise NotImplementedError",
    ]
    fail_under = 70

# Ensure that we use the public Python Package Index.
[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
